--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
