--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-body {
+* {
   font-size: 16px;
+}
+
+body {
   font-family: 'Roboto', sans-serif;
   min-width: 100vw;
   min-height: 100vh;
@@ -7,4 +10,86 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
+}
+
+.progress {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+@media screen and (min-width: 568px) {
+  .progress {
+    flex-direction: row;
+  }
+}
+
+.progressIndicator {
+  transition: stroke-dashoffset 1s ease-in-out;
+  transform-origin: center;
+}
+
+#progressInput {
+  width: 50px;
+  height: 32px;
+  padding: 5px 7px;
+  border-radius: 25px;
+  border: 1px solid black;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.checkboxLabel {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 15px;
+}
+
+#hiddenInput {
+  display: none;
+}
+
+.progressSlider {
+  border: none;
+  position: relative;
+  width: 50px;
+  height: 32px;
+  transition: 0.5s;
+  background-color: #dfe6f0;
+  border-radius: 25px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.progressSlider::before {
+  position: absolute;
+  content: '';
+  height: 24px;
+  width: 24px;
+  left: 4px;
+  top: 4px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:focus + .progressSlider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .progressSlider::before {
+  transform: translateX(18px);
+}
+
+.stateControllers {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
